--- a/start.html
+++ b/start.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My name is aryan sabasana</h1>
+    <h1>My name is aryan </h1>
     
 </body>
 </html>
