--- a/start.html
+++ b/start.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My name is Aryan Sabasana </h1>
+    <h1>My name is Aryan  </h1>
     
 </body>
 </html>
